--- a/.env
+++ b/.env
@@ -1,3 +1,26 @@
-THEME=https://raw.githubusercontent.com/seanwcom/Red-Graphite-for-Obsidian/HEAD/theme.css
+SITE_NAME_HEADER=CAELESTIS
+SITE_MAIN_LANGUAGE=pt-br
+SITE_BASE_URL=
+SHOW_CREATED_TIMESTAMP=false
+TIMESTAMP_FORMAT=dd MMM, yyyy HH:mm
+SHOW_UPDATED_TIMESTAMP=true
+NOTE_ICON_DEFAULT=
+NOTE_ICON_TITLE=false
+NOTE_ICON_FILETREE=false
+NOTE_ICON_INTERNAL_LINKS=false
+NOTE_ICON_BACK_LINKS=false
+STYLE_SETTINGS_CSS=body.css-settings-manager { } body.theme-light.css-settings-manager { } body.theme-dark.css-settings-manager { }
+STYLE_SETTINGS_BODY_CLASSES=theme-dark mod-windows is-frameless is-hidden-frameless obsidian-app show-inline-title show-ribbon show-view-header is-maximized css-settings-manager its-theme sidebar-float-bottom folder-arrow-hidden Heading check-color check-bg wotc-beyond is-focused
+USE_FULL_RESOLUTION_IMAGES=true
+THEME=https://raw.githubusercontent.com/SalemElatar/salem-obsidian-theme/HEAD/theme.css
 BASE_THEME=dark
 dgHomeLink=true
+dgPassFrontmatter=false
+dgShowBacklinks=false
+dgShowLocalGraph=false
+dgShowInlineTitle=false
+dgShowFileTree=false
+dgEnableSearch=false
+dgShowToc=false
+dgLinkPreview=false
+dgShowTags=false
