--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ STYLE_SETTINGS_CSS=body.css-settings-manager { --file-line-width: 1800px; --h1-f
 STYLE_SETTINGS_BODY_CLASSES=mod-windows is-frameless is-maximized is-hidden-frameless obsidian-app show-ribbon show-view-header css-settings-manager Heading theme-light is-focused its-theme sizing-large titlebar-colors sidebar-float-bottom folder-arrow-hidden illusion-h1 illusion-h2 illusion-h3 list-default-bullet check-color check-bg wotc-beyond
 USE_FULL_RESOLUTION_IMAGES=true
 THEME=https://raw.githubusercontent.com/SlRvb/Obsidian--ITS-Theme/HEAD/theme.css
-BASE_THEME=light
+BASE_THEME=dark
 dgHomeLink=true
 dgPassFrontmatter=false
 dgShowBacklinks=true
