--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ NOTE_ICON_FILETREE=false
 NOTE_ICON_INTERNAL_LINKS=false
 NOTE_ICON_BACK_LINKS=false
 STYLE_SETTINGS_CSS=body.css-settings-manager { } body.theme-light.css-settings-manager { } body.theme-dark.css-settings-manager { }
-STYLE_SETTINGS_BODY_CLASSES=theme-dark mod-windows is-frameless is-maximized is-hidden-frameless obsidian-app show-inline-title show-ribbon show-view-header css-settings-manager basic-pathfinder-2e-layout-theme-default pathfinder-2e-action-layout-theme-default pathfinder-2e-hazard-layout-theme-default pathfinder-2e-influence-layout-theme-default pathfinder-2e-item-layout-theme-default pathfinder-2e-misc-layout-theme-default pathfinder-2e-plane-layout-theme-default pathfinder-2e-quest-layout-theme-default pathfinder-2e-settlement-layout-theme-default is-focused
+STYLE_SETTINGS_BODY_CLASSES=theme-dark mod-windows is-frameless is-maximized is-hidden-frameless obsidian-app show-inline-title show-ribbon show-view-header css-settings-manager is-focused basic-pathfinder-2e-layout-theme-default pathfinder-2e-action-layout-theme-default pathfinder-2e-hazard-layout-theme-default pathfinder-2e-influence-layout-theme-default pathfinder-2e-item-layout-theme-default pathfinder-2e-misc-layout-theme-default pathfinder-2e-plane-layout-theme-default pathfinder-2e-quest-layout-theme-default pathfinder-2e-settlement-layout-theme-default its-theme sidebar-float-bottom folder-arrow-hidden justified Heading check-color check-bg wotc-beyond
 USE_FULL_RESOLUTION_IMAGES=true
 THEME=https://raw.githubusercontent.com/sspaeti/obsidian_kanagawa/HEAD/theme.css
 BASE_THEME=dark
