--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 SITE_NAME_HEADER=CAELESTIS
 SITE_MAIN_LANGUAGE=pt-br
-SITE_BASE_URL=https://caelestis.vercel.app/
+SITE_BASE_URL=https://calamitates.vercel.app/
 SHOW_CREATED_TIMESTAMP=false
 TIMESTAMP_FORMAT=dd MMM, yyyy HH:mm
 SHOW_UPDATED_TIMESTAMP=false
